--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="inner text-center">
             <h1 class="logo-name">Vrinda Creations</h1>
-            <h2>Like the basil fill the atmosphere with bliss, Vrinda Creations fill the most important occasions of your life with splendor holding the felicity</h2>
+            <h3>Like the basil fill the atmosphere with bliss, Vrinda Creations fill the most important occasions of your life with splendor holding the felicity</h3>
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
             </div></p>
             <dev class="media-body">
               <h4 class="dark-blue regular">Phone Number</h4>
-              <p class="light-blue regular alt-p">+440 875369208 - <span class="contacts-sp">Phone Booking</span></p>
+              <p class="light-blue">+440 875369208 - <span class="contacts-sp">Phone Booking</span></p>
             </dev>
           </dev>
           <dev class="col-xs-4 text-center">
@@ -161,7 +161,7 @@
             </div></p>
             <div class="media-body">
               <h4 class="dark-blue regular">Email </h4>
-              <p class="light-blue regular alt-p">abc@xyz.com</p>
+              <p class="light-blue">abc@xyz.com</p>
             </div>
           </dev>
           <dev class="col-xs-4 text-center">
@@ -170,7 +170,7 @@
             </div></p>
             <dev class="media-body">
               <h4 class="dark-blue regular">Visit Us</h4>
-              <p class="light-blue regular alt-p">Some Colony, Some Nagar, New Delhi</p>
+              <p class="light-blue">Some Colony, Some Nagar, New Delhi</p>
             </dev>
           </dev>
         </div>
