--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script type="text/javascript">
+lazySizesConfig.expand = 1000;
+lazySizesConfig.expFactor = 3; 
+</script>
   <!-- =======================================================
     Theme Name: Delicious
     Theme URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
